디자인 및 기타

--- a/app/src/main/res/layout/choicemenu.xml
+++ b/app/src/main/res/layout/choicemenu.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent">
     <RelativeLayout
         android:layout_height="match_parent"
-        android:layout_width="match_parent">
+        android:layout_width="match_parent"
+        android:background="@color/colorPrimary">
         <TextView
             android:id="@+id/test1"
             android:layout_width="wrap_content"
@@ -12,10 +13,12 @@
             android:hint="배가너무고파요"/>
 
         <Button
+            android:background="@drawable/btndesign1"
+            android:textStyle="bold"
             android:layout_centerHorizontal="true"
             android:id="@+id/rentform"
             android:layout_height="90dp"
-            android:layout_width="150dp"
+            android:layout_width="300dp"
             android:text="대여신청"
             android:textSize="30dp"
             android:layout_marginLeft="30dp"
@@ -23,9 +26,11 @@
         </Button>
 
         <Button
+            android:background="@drawable/btndesign1"
+            android:textStyle="bold"
             android:id="@+id/checkempty"
             android:layout_height="90dp"
-            android:layout_width="150dp"
+            android:layout_width="300dp"
             android:text="잔여확인"
             android:textSize="30dp"
             android:layout_below="@+id/rentform"
@@ -36,9 +41,11 @@
         </Button>
 
         <Button
+            android:background="@drawable/btndesign1"
+            android:textStyle="bold"
             android:id="@+id/notice"
             android:layout_height="90dp"
-            android:layout_width="150dp"
+            android:layout_width="300dp"
             android:text="공지사항"
             android:textSize="30dp"
             android:layout_below="@+id/checkempty"
@@ -49,9 +56,11 @@
 
         </Button>
         <Button
+            android:background="@drawable/btndesign1"
+            android:textStyle="bold"
             android:id="@+id/testing"
             android:layout_height="90dp"
-            android:layout_width="150dp"
+            android:layout_width="300dp"
             android:text="기능테스트"
             android:textSize="30dp"
             android:layout_below="@+id/notice"
