--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,36 +5,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.com.rentapp.MainActivity">
+<LinearLayout
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:background="@drawable/samplelogo">
 
+    </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/samplelogo">
+        >
 
         <EditText
             android:id="@+id/editID"
-            android:layout_width="200dp"
+            android:layout_width="300dp"
             android:layout_height="50dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="150dp"
+
             android:hint="아이디를 입력하시오" />
 
         <TextView
             android:layout_width="50dp"
             android:layout_height="50dp"
 
-            android:layout_marginTop="150dp"
             android:layout_toLeftOf="@+id/editID"
             android:gravity="center"
+            android:textStyle="bold"
             android:text="ID"
             android:textSize="20dp" />
 
         <EditText
             android:id="@+id/editpw"
-            android:layout_width="200dp"
+            android:layout_width="300dp"
             android:layout_height="50dp"
             android:layout_below="@+id/editID"
-            android:layout_marginTop="20dp"
+
             android:layout_centerHorizontal="true"
             android:hint="패스워드를 입력하시오" />
 
@@ -42,8 +51,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_below="@+id/editID"
+            android:textStyle="bold"
 
-            android:layout_marginTop="20dp"
             android:layout_toLeftOf="@+id/editpw"
             android:gravity="center"
             android:text="PW"
@@ -56,8 +65,8 @@
             android:layout_height="50dp"
             android:layout_below="@+id/editpw"
             android:layout_centerInParent="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:text="Login"></Button>
     </RelativeLayout>
-
+</LinearLayout>
 </android.support.constraint.ConstraintLayout>
