--- a/app/src/main/res/layout/rentlistitem.xml
+++ b/app/src/main/res/layout/rentlistitem.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical">
     <TextView
+        android:background="@drawable/btndesign1"
         android:gravity="center"
         android:textAlignment="center"
         android:textStyle="bold"
